--- a/SocialMedia/src/main/resources/application.properties
+++ b/SocialMedia/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8087
+spring.datasource.url=jdbc:mysql://localhost:3306/SocialMedia
+spring.datasource.username=Utilisateur1
+spring.datasource.password=12345
+spring.jpa.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none // none => do not apply anything on database
