--- a/SocialMedia/src/main/resources/application.properties
+++ b/SocialMedia/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8087
-spring.datasource.url=jdbc:mysql://localhost:3366/SocialMedia
-spring.datasource.username=user1
-spring.datasource.password=12345
+sspring.datasource.url=jdbc:mysql://mariadb/SocialMedia
+spring.datasource.username=pifou
+spring.datasource.password=pasglop
 spring.jpa.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 springdoc.api-docs.path=/api-docs
 
