fix: api deployment in docker

--- a/SocialMedia/src/main/resources/application.properties
+++ b/SocialMedia/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8087
-sspring.datasource.url=jdbc:mysql://mariadb/SocialMedia
+spring.datasource.url=jdbc:mysql://mariadb/SocialMedia
 spring.datasource.username=pifou
 spring.datasource.password=pasglop
 spring.jpa.driver-class-name=org.mariadb.jdbc.Driver
